--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,27 @@ name: "Run CI"
 on: pull_request
 
 jobs:
-  tests:
-    runs-on: ubuntu-latest
+  python_tests:
+    runs-on: ${{ matrix.os }}
+    strategy:
+    matrix:
+      os: [ubuntu-latest,macos-latest]
+      py-version:
+        - "3.10"
+        - 3.11
+        - 3.12
     steps:
-      - uses: actions/checkout@v3
-      - uses: prefix-dev/setup-pixi@v0.5.1
-        with:
-          pixi-version: v0.16.1
-          cache: true
-      - run: pixi run test
+      - name: Set up Python ${{ matrix.py-version }}
+        uses: actions/setup-python@v2
+        with
+          python-version: ${{ matrix.py-version }}
+    tests:
+      run-on: matrix.os
+      steps:
+        - uses: actions/checkout@v3
+        - uses: prefix-dev/setup-pixi@v0.5.1
+          with:
+            pixi-version: v0.16.1
+            cache: true
+        - run: pixi run test
       
