--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Set up Python ${{ matrix.py-version }}
         uses: actions/setup-python@v2
-        with
+        with:
           python-version: ${{ matrix.py-version }}
     tests:
       run-on: matrix.os
