--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           python-version: ${{ matrix.py-version }}
   tests:
     runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest,macos-latest]
     steps:
       - uses: actions/checkout@v3
       - uses: prefix-dev/setup-pixi@v0.5.1
