add pre-commit in ci with condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: pre-commit/action@v3.0.1
 
   tests:
+    needs: pre-commit
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
