--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,26 @@ jobs:
       - uses: actions/setup-python@v3
       - uses: pre-commit/action@v3.0.1
 
+  configure:
+    runs-on: ubuntu-latest
+    steps:
+      - name: CPP check
+        uses: actions/checkout@v3
+      - uses: prefix-dev/setup-pixi@v0.5.1
+        with:
+          pixi-version: v0.16.1
+          cache: true
+      - run: |
+          pixi add cppcheck
+          pixi shell
+          cmake -S . -B .build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug -DBUILD_EXAMPLES=ON
+          cppcheck --enable=all -q --project=.build/compile_commands.json --suppressions-list=.cppcheck 2> cppcheck_err.txt
+          if [[ -s cppcheck_err.txt ]];
+          then
+              cat cppcheck_err.txt
+              exit 1
+          fi
+
   tests:
     needs: pre-commit
     runs-on: ${{ matrix.os }}
