--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,8 @@ jobs:
         with:
           pixi-version: v0.16.1
           cache: true
+      - run: pixi add cppcheck
       - run: |
-          pixi add cppcheck
-          pixi shell
           cmake -S . -B .build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug -DBUILD_EXAMPLES=ON
           cppcheck --enable=all -q --project=.build/compile_commands.json --suppressions-list=.cppcheck 2> cppcheck_err.txt
           if [[ -s cppcheck_err.txt ]];
@@ -44,6 +43,7 @@ jobs:
               cat cppcheck_err.txt
               exit 1
           fi
+        shell: pixi run bash -e {0}
 
   tests:
     needs: pre-commit
