--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - run: pixi add cppcheck
       - run: |
           cmake -S . -B .build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug -DBUILD_EXAMPLES=ON
-          cppcheck --enable=all -q --project=.build/compile_commands.json --suppressions-list=.cppcheck 2> cppcheck_err.txt
+          cppcheck --enable=all --disable=information -q --project=.build/compile_commands.json --suppressions-list=.cppcheck 2> cppcheck_err.txt
         shell: pixi run bash -e {0}
       - run: cat cppcheck_err.txt
       - run: |
