--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -12,7 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: prefix-dev/setup-pixi@v0.5.1
+        with:
+          pixi-version: v0.16.1
+          cache: true
       - run: pixi run doc
       - uses: actions/upload-pages-artifact@v3
         with:
